sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:4: error: value lgr is not a member of Int
  for (i <-0 lgr-2){
             ^