sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var lgr : Int = getNombreValeurs
  for (i <-0 lgr-2){
    if (plusPetit(i+1,i)){
      echange(i,i+1)
    }
  }
  for (i<- lgr-2 to 0 by -1){
    if (plusPetit(i+1,i)){
      echange(i,i+1)
    }    
  }
  
}